kubernetes/apps/network/technitium/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: technitium-local
  namespace: technitium
spec:
  entryPoints: [web]
  routes:
    - match: Host(`technitium.${DOMAIN_LOCAL}`)
      kind: Rule
      services:
        - name: technitium-web
          port: 5380
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: technitium-public
#   namespace: technitium
# spec:
#   entryPoints: [websecure]
#   routes:
#     - match: Host(`beszel.${DOMAIN_PUBLIC}`)
#       kind: Rule
#       services:
#         - name: technitium
#           port: 5380
#   tls: {}
